# cuda-memtrace

./: CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt  Common.h  InstrumentDevice.cpp  InstrumentHost.cpp  LinkDeviceSupport.cpp  LinkHostSupport.cpp  LocateKCalls.cpp  LocateKCalls.h  MarkAllDeviceForInline.cpp  MemtracePass.cpp  Passes.h  RegisterStandardPasses.cpp  cutrace_io.h
support/: CMakeLists.txt  device-support.cu  host-support.cu
test/: Makefile  launches.O0.ll  launches.O1.ll  launches.O3.ll  launches.cu  launches.host.O0.ll  launches.host.O3.ll  lit.cfg.py  tracing-device.cu  tracing-host-only.cu
tools/: CMakeLists.txt  cta-sets.py  cutrace_io.h  cutracecompress.c  cutracedump.c  headerize.py  tracedump.c
tutorial/: main.tex
